--- a/playbook.yml
+++ b/playbook.yml
@@ -22,3 +22,15 @@
     copy:
       src: index.html
       dest: /var/www/html/
+
+
+
+---
+- name: Temporary Playbook
+  hosts: tag_Name_Ansible___Tower_Weekend___Target
+  vars:
+    ansible_user: ec2-user
+  gather_facts: no
+  tasks:
+    - debug:
+        var: ansible_facts
